Implemented Authentication with JWT & Authorization with Roles and Password Encryption

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,maven,java,java-web
+/.idea/
