--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # enable ansi output
 spring.output.ansi.enabled = ALWAYS
 # JDBC Testing Configs:
-spring.datasource.url=jdbc:mysql://167.86.81.129:3306/aqar_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://167.86.81.129:3306/backme_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=alaaet
 spring.datasource.password=Maxman@123
+spring.datasource.platform=mysql
