--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://167.86.81.129:3306/backme_db?useSSL=false&ser
 spring.datasource.username=alaaet
 spring.datasource.password=Maxman@123
 spring.datasource.platform=mysql
+
+
+spring.servlet.multipart.max-file-size=512KB
+spring.servlet.multipart.max-request-size=512KB
