--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # enable ansi output
 spring.output.ansi.enabled = ALWAYS
 # JDBC Testing Configs:
-spring.datasource.url=jdbc:mysql://167.86.81.129:3306/backme_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://167.86.81.129:3306/backme_db?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=alaaet
 spring.datasource.password=Maxman@123
 spring.datasource.platform=mysql
@@ -9,3 +9,5 @@ spring.datasource.platform=mysql
 
 spring.servlet.multipart.max-file-size=512KB
 spring.servlet.multipart.max-request-size=512KB
+
+spring.jpa.hibernate.ddl-auto=update
