Added Public profile handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.servlet.multipart.max-file-size=512KB
 spring.servlet.multipart.max-request-size=512KB
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
